# digital-finder

./: .gitignore  DigitalFinder.spec  README.md  main.py  pyproject.toml  test_coordinate_conversion.py  test_preview_shift.py  test_zwoasi.py
digital_finder/: __init__.py  app.py  config.py  logging_setup.py  models.py  stars.py  storage.py
digital_finder/services/: __init__.py  alpaca_telescope.py  astap_solver.py  camera_settings.py  interfaces.py  simulated.py  zwo_camera.py
digital_finder/ui/: __init__.py  alignment_wizard.py
docs/: PROJECT_CONTEXT.md  SESSION_HANDOFF_2026-04-02.md
samples/: rosette_1.ini  rosette_1.wcs
