[project]
name = "digital-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"alpyca>=3.1.2",
	"astropy>=7.2.0",
	"numpy>=2.2.0",
	"platformdirs>=4.3.0",
	"pyside6>=6.8.0",
	"pyzwoasi>=0.2.6",
	"tzdata>=2025.2",
]

[project.scripts]
digital-finder = "main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
